<resources>
    <string name="app_name">GestionInventarios</string>
    <string name="title_home">Inicio</string>
    <string name="title_add">Registrar</string>
    <string name="title_movement">Movimientos</string>
    <string name="title_report">Reporte</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="restablecer">Restablecer contraseña</string>
    <string name="generar">Generar codigo</string>
    <string name="confirmar">Confirmar contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="entradas_salidas">Entradas/salidas</string>


    <string-array name="opciones_spinner">
        <item enabled="false">Selecciona una categoría</item>
        <item>Refrigerador</item>
        <item>Microondas</item>
        <item>Lavadora</item>
    </string-array>

    <string-array name="opciones_spinner1">
        <item enabled="false">Selecciona una categoría</item>
        <item>Electrónica</item>
        <item>Ropa</item>
        <item>Muebles</item>
    </string-array>

    <string-array name="opciones_spinner2">
        <item enabled="false">Género</item>
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Prefiero no decir</item>
    </string-array>


    <string name="see_underlined_detail"><u>Ver detalle</u></string>
    <string name="underline_category">Categorías</string>


    <string name="available_articles">Movimientos por categoría</string>
    <string name="more_datail_underline"><u> Más detalles </u> </string>
    <string name="search_report">Buscar un artículo</string>


    <string name="categories_title">Categorías</string>
    <string name="btn_new_category">Nueva Categoría</string>
    <string name="erase_category"><u>Eliminar Categoría</u></string>
    <string name="erase_article">Borrar artículo</string>


    <string name="add_new_product">Agregar artículo</string>


    <string name="all_articles">Todos los artículos</string>

</resources>