<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.all_articles.All_articlesFragment">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_regresar_cate"
        android:id="@+id/iv_back_all_articles">

    </ImageView>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_articles"
        android:gravity="center"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/text1"
        />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/round_layout_gray">

            <EditText
                android:id="@+id/et_search_report"
                android:layout_width="255dp"
                android:layout_height="match_parent"
                android:text="@string/search_report"
                android:textColor="@color/text_search"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                >

            </EditText>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_search"
                android:layout_gravity="center"
                android:id="@+id/iv_search_report">

            </ImageView>

        </LinearLayout>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_filter"
            android:layout_marginLeft="5dp"
            android:id="@+id/iv_dates_report">

        </ImageView>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        android:gravity="end"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_product"
            android:textColor="@color/primary1"
            android:textSize="22sp"
            android:gravity="center"
            android:textStyle="bold">
            
        </TextView>
        
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/image_add">

        </ImageView>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_layout2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="No implementado aún..."
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary1">

        </TextView>

    </LinearLayout>





</LinearLayout>